--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pelis",
+  "name": "cvricardo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
@@ -18,8 +21,11 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.4",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
